--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
     <main>
         <section id="home" class="hero">
             <div class="container">
-                [cite_start]<h1>Aayushi Gautam [cite: 4]</h1>
-                <p>Ph.D. [cite_start]Scholar in High-Performance Computing & Computer Systems [cite: 6, 9]</p>
-                [cite_start]<p>Seeking a challenging role in research and development. [cite: 7]</p>
+                <h1>Aayushi Gautam</h1>
+                <p>Ph.D. Scholar in High-Performance Computing & Computer Systems</p>
+                <p>Seeking a challenging role in research and development.</p>
                 <div class="social-links">
-                    [cite_start]<a href="https://github.com/aayushi363" target="_blank" title="GitHub">GitHub [cite: 5]</a>
-                    [cite_start]<a href="https://linkedin.com/in/aayushi-gautam-156bb9147" target="_blank" title="LinkedIn">LinkedIn [cite: 5]</a>
+                    <a href="https://github.com/aayushi363" target="_blank" title="GitHub">GitHub</a>
+                    <a href="https://linkedin.com/in/aayushi-gautam-156bb9147" target="_blank" title="LinkedIn">LinkedIn</a>
                     <a href="Resume (3).pdf" target="_blank">Download Resume</a>
                 </div>
             </div>
@@ -150,7 +150,7 @@
             <div class="container">
                 <h2>About Me</h2>
                 <p>
-                    [cite_start]I am a motivated Ph.D. scholar at Northeastern University specializing in High-Performance Computing and Computer Systems. [cite: 6, 9] [cite_start]My research focuses on developing innovative debugging methodologies by combining checkpointing with model checking to efficiently diagnose concurrency bugs in multithreaded applications. [cite: 43] [cite_start]With a strong foundation in C, C++, Python, and distributed systems [cite: 16, 17][cite_start], I am skilled in independent research, teamwork, and complex problem-solving. [cite: 6] [cite_start]I am an active member of the Systems Research Group at NEU. [cite: 46]
+                    I am a motivated Ph.D. scholar at Northeastern University specializing in High-Performance Computing and Computer Systems. My research focuses on developing innovative debugging methodologies by combining checkpointing with model checking to efficiently diagnose concurrency bugs in multithreaded applications. With a strong foundation in C, C++, Python, and distributed systems, I am skilled in independent research, teamwork, and complex problem-solving. I am an active member of the Systems Research Group at NEU.
                 </p>
             </div>
         </section>
@@ -161,28 +161,28 @@
                 <div class="project-grid">
                     <div class="card">
                         <h3>DeepDebugging (Ongoing)</h3>
-                        [cite_start]<p>Developing an innovative debugging methodology that combines DMTCP checkpointing with McMini model checking to efficiently diagnose concurrency bugs in multithreaded applications. [cite: 43]</p>
+                        <p>Developing an innovative debugging methodology that combines DMTCP checkpointing with McMini model checking to efficiently diagnose concurrency bugs in multithreaded applications.</p>
                         <div class="tags">
                             <span>DMTCP</span><span>DPOR</span><span>Model Checking</span>
                         </div>
                     </div>
                     <div class="card">
                         <h3>Transparently Checkpointing CUDA on GPUs</h3>
-                        [cite_start]<p>Developed a low-latency checkpointing system for NVIDIA GPUs using CUDA Runtime API and Unified Memory, enabling fault tolerance for HPC workloads on the Perlmutter supercomputer. [cite: 24, 25]</p>
+                        <p>Developed a low-latency checkpointing system for NVIDIA GPUs using CUDA Runtime API and Unified Memory, enabling fault tolerance for HPC workloads on the Perlmutter supercomputer.</p>
                         <div class="tags">
                            <span>CUDA</span><span>Slurm</span><span>Cray MPI</span><span>HPC</span>
                         </div>
                     </div>
                     <div class="card">
                         <h3>DMTCP for RISC-V</h3>
-                        [cite_start]<p>Extended Distributed MultiThreaded CheckPointing (DMTCP) to RISC-V architectures using the GCC cross-compilation toolchain. [cite: 27]</p>
+                        <p>Extended Distributed MultiThreaded CheckPointing (DMTCP) to RISC-V architectures using the GCC cross-compilation toolchain.</p>
                          <div class="tags">
                            <span>DMTCP</span><span>RISC-V</span><span>GCC</span>
                         </div>
                     </div>
                      <div class="card">
                         <h3>Mini Model Checker</h3>
-                        [cite_start]<p>A Bounded Stateless Explicit-State Model Checker for Finding Deadlock and Assertion Errors in Multi-Threaded Software. [cite: 39, 40]</p>
+                        <p>A Bounded Stateless Explicit-State Model Checker for Finding Deadlock and Assertion Errors in Multi-Threaded Software.</p>
                          <div class="tags">
                            <span>C++</span><span>Concurrency</span><span>Debugging</span>
                         </div>
@@ -196,19 +196,19 @@
                 <h2>Experience</h2>
                 <div class="project-grid">
                     <div class="card">
-                        [cite_start]<h3>Research Intern [cite: 20]</h3>
-                        [cite_start]<p><strong>Lawrence Berkeley National Laboratory (NERSC) [cite: 18]</strong></p>
-                        [cite_start]<p>June 2024 - Sep 2024 [cite: 19]</p>
+                        <h3>Research Intern</h3>
+                        <p><strong>Lawrence Berkeley National Laboratory (NERSC)</strong></p>
+                        <p>June 2024 - Sep 2024</p>
                     </div>
                     <div class="card">
-                        [cite_start]<h3>Research Intern [cite: 22]</h3>
-                        [cite_start]<p><strong>RedHat [cite: 21]</strong></p>
-                        [cite_start]<p>June 2023 - Sep 2023 [cite: 21]</p>
+                        <h3>Research Intern</h3>
+                        <p><strong>RedHat</strong></p>
+                        <p>June 2023 - Sep 2023</p>
                     </div>
                     <div class="card">
                         <h3>Senior Project Technical Assistant</h3>
-                        [cite_start]<p><strong>Indian Institute of Technology, Bombay [cite: 33]</strong></p>
-                        [cite_start]<p>Sep 2021 - July 2022 [cite: 33]</p>
+                        <p><strong>Indian Institute of Technology, Bombay</strong></p>
+                        <p>Sep 2021 - July 2022</p>
                     </div>
                 </div>
             </div>
@@ -218,7 +218,7 @@
             <div class="container" style="text-align: center;">
                 <h2>Get In Touch</h2>
                 <p>I'm currently seeking new opportunities. Feel free to reach out!</p>
-                [cite_start]<p><strong>Email:</strong> <a href="mailto:gautam.aa@northeastern.edu" style="color: var(--primary-color);">gautam.aa@northeastern.edu [cite: 3]</a></p>
+                <p><strong>Email:</strong> <a href="mailto:gautam.aa@northeastern.edu" style="color: var(--primary-color);">gautam.aa@northeastern.edu</a></p>
             </div>
         </section>
     </main>
