--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aayushi Gautam | PhD Scholar, High-Performance Computing</title>
     <style>
+        html {
+            font-size: 18px; /* Base font size for the entire page */
+        }
         :root {
             --bg-color: #2c3e50; /* Dark Slate Blue */
             --text-color: #ecf0f1; /* Light Gray */
@@ -56,12 +59,12 @@
             color: var(--primary-color);
         }
         section {
-            padding: 6rem 0 2rem 0;
+            padding: 4rem 0; /* Reduced top and bottom padding for compact layout */
             border-bottom: 1px solid var(--secondary-color);
         }
         .hero {
             text-align: center;
-            padding: 8rem 0;
+            padding: 6rem 0 4rem 0; /* Reduced top and bottom padding for compact layout */
         }
         .hero h1 {
             font-size: 3rem;
@@ -97,12 +100,12 @@
             border-radius: 8px;
         }
         .card h3 { margin-top: 0; }
-        .card h3 a {
-            color: var(--text-color); /* Maintain text color for linked title */
+        .card p a {
+            color: var(--primary-color);
             text-decoration: none;
         }
-        .card h3 a:hover {
-            color: var(--primary-color); /* Highlight linked title on hover */
+        .card p a:hover {
+            text-decoration: underline;
         }
         .card .tags {
             margin-top: 1rem;
@@ -119,7 +122,7 @@
             padding: 2rem 0;
         }
 
-        /* New styles for the About Me section */
+        /* Styles for the About Me section */
         .about-content {
             display: flex;
             align-items: center;
@@ -222,8 +225,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <h3><a href="https://youtu.be/Nq1voYgPO1k?si=sQBQNeqChIvXsmzr" target="_blank">DMTCP for RISC-V</a></h3>
-                        <p>Extended Distributed MultiThreaded CheckPointing (DMTCP) to RISC-V architectures using the GCC cross-compilation toolchain.</p>
+                        <h3>DMTCP for RISC-V</h3>
+                        <p>Extended Distributed MultiThreaded CheckPointing (DMTCP) to RISC-V architectures using the GCC cross-compilation toolchain. Work presented in <a href="https://youtu.be/Nq1voYgPO1k?si=sQBQNeqChIvXsmzr" target="_blank">Latch-Up 2024</a>.</p>
                          <div class="tags">
                            <span>DMTCP</span><span>RISC-V</span><span>GCC</span>
                         </div>
