--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                         </p>
                     </div>
                     <figure class="about-image">
-                        <img src="profile.jpg" alt="A photo of Aayushi Gautam">
+                        <img src="profile.jpeg" alt="A photo of Aayushi Gautam">
                         <figcaption>
-                            Outside of research, I enjoy hiking, photography, and exploring new coffee shops.
+                            Outside of research, I enjoy hiking, photography, and exploring new coffee shops. Gardening is another favorite pastime, and I like to give my plants unique names—it adds a touch of personality and makes caring for them even more enjoyable. My current companions are two houseplants named <strong>Gajodhar</strong> and <strong>Lambodar</strong>.
                         </figcaption>
                     </figure>
                 </div>
